--- a/app/src/main/res/layout/media_layout_listitem.xml
+++ b/app/src/main/res/layout/media_layout_listitem.xml
@@ -1,31 +1,46 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent"
-    android:layout_height="wrap_content"
     xmlns:test="http://schemas.android.com/tools"
-    android:padding="16dp"
-    android:id="@+id/media_recycler_parent">
+    android:id="@+id/media_recycler_parent"
+    android:layout_width="match_parent"
+    android:layout_height="80dp">
 
-
-
-    <ImageView
-        android:layout_width="80dp"
-        android:layout_height="80dp"
-        android:id="@+id/media_image"
-        android:src="@mipmap/ic_launcher"
-        />
-
-    <TextView
-        android:id="@+id/media_name"
-        android:layout_width="wrap_content"
+    <RelativeLayout
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_centerVertical="true"
-        android:layout_marginStart="16dp"
-        android:layout_marginTop="16dp"
-        android:layout_marginEnd="16dp"
-        android:layout_marginBottom="16dp"
-        android:layout_toRightOf="@id/media_image"
-        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
-        test:text="media" />
+        android:padding="16dp"
+        >
+
+        <ImageView
+            android:contentDescription="media icon"
+            android:id="@+id/media_image"
+            android:layout_width="48dp"
+            android:layout_height="48dp"
+            android:src="@mipmap/ic_launcher" />
+
+        <TextView
+            android:id="@+id/media_name"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_centerVertical="true"
+            android:layout_margin="16dp"
+            android:layout_marginEnd="16dp"
+            android:layout_toEndOf="@+id/media_image"
+            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
+            test:text="Media Type" />
+
+    </RelativeLayout>
+
+    <View
+        android:id="@+id/divider"
+        android:layout_width="match_parent"
+        android:layout_height="1dp"
+        android:layout_centerHorizontal="true"
+        android:layout_alignParentBottom="true"
+        android:background="?android:attr/listDivider" /> <!-- what the fuck -->
+
+
+
+
 
 </RelativeLayout>
