--- a/app/src/main/res/layout/media_layout_listitem.xml
+++ b/app/src/main/res/layout/media_layout_listitem.xml
@@ -3,44 +3,39 @@
     xmlns:test="http://schemas.android.com/tools"
     android:id="@+id/media_recycler_parent"
     android:layout_width="match_parent"
-    android:layout_height="80dp">
+    android:layout_height="wrap_content">
 
-    <RelativeLayout
+    <LinearLayout
+        android:id="@+id/inner_linear_layout"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:padding="16dp"
-        >
-
-        <ImageView
-            android:contentDescription="media icon"
-            android:id="@+id/media_image"
-            android:layout_width="48dp"
-            android:layout_height="48dp"
-            android:src="@mipmap/ic_launcher" />
+        android:orientation="vertical"
+        android:padding = "16dp">
 
         <TextView
             android:id="@+id/media_name"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_centerVertical="true"
-            android:layout_margin="16dp"
-            android:layout_marginEnd="16dp"
-            android:layout_toEndOf="@+id/media_image"
-            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
-            test:text="Media Type" />
+            android:fontFamily="sans-serif-medium"
+            android:textAppearance="?android:textAppearanceMedium"
+            android:textColor="#2B3D4D"
+            test:text="Media Type"/>
 
-    </RelativeLayout>
+        <TextView
+            android:id="@+id/media_desc"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:fontFamily="sans-serif"
+            android:textAppearance="?android:textAppearanceSmall"
+            android:textColor="#AEB6BD"
+            test:text = "x entries"/>
 
-    <View
-        android:id="@+id/divider"
-        android:layout_width="match_parent"
-        android:layout_height="1dp"
-        android:layout_centerHorizontal="true"
-        android:layout_alignParentBottom="true"
-        android:background="?android:attr/listDivider" /> <!-- what the fuck -->
+    </LinearLayout>
 
-
-
-
-
+<!--    <View-->
+<!--        android:id="@+id/divider"-->
+<!--        android:layout_width="match_parent"-->
+<!--        android:layout_height="1dp"-->
+<!--        android:layout_marginTop="16dp"-->
+<!--        android:background="?android:attr/listDivider" />-->
 </RelativeLayout>
