--- a/app/src/main/res/layout/layout_content_list_item.xml
+++ b/app/src/main/res/layout/layout_content_list_item.xml
@@ -1,45 +1,71 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout 
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    android:orientation="horizontal" 
     android:layout_width="match_parent"
-    android:layout_height="76dp"
-    android:gravity="center_vertical">
-
-    <ImageView
-        android:id="@+id/content_list_item_image"
-        android:layout_width="76dp"
-        android:layout_height="match_parent"
-        android:scaleType="centerCrop"
-        android:src="@drawable/dark_souls"
-        android:layout_marginRight="8dp"
-        />
+    android:layout_height="88dp"
+    android:orientation="horizontal"
+    android:padding="8dp">
 
     <LinearLayout
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:orientation="vertical"
-        android:padding="8dp">
-        
-        <TextView
-            android:id="@+id/content_list_item_title"
+        android:layout_height="match_parent"
+        android:layout_alignParentLeft="true"
+        android:gravity="center_vertical">
+
+        <ImageView
+            android:id="@+id/content_list_item_image"
+            android:layout_width="68dp"
+            android:layout_height="match_parent"
+            android:layout_marginRight="8dp"
+            android:scaleType="centerCrop"
+            android:src="@drawable/dark_souls" />
+
+        <LinearLayout
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            tools:text="Dark Souls"
-            android:fontFamily="sans-serif-light"
-            android:textSize="24sp"
-            android:letterSpacing="0"
-            android:paddingBottom="8dp"/>
-        
-        <TextView
-            android:id="@+id/content_list_item_status"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            tools:text="Completed"
-            android:fontFamily="sans-serif"
-            android:textSize="14sp"
-            android:letterSpacing="0.25"/>
-        
+            android:orientation="vertical">
+
+            <TextView
+                android:id="@+id/content_list_item_date_added"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:fontFamily="sans-serif"
+                android:letterSpacing="1.5"
+                android:textSize="10sp"
+                tools:text="10 1 2020" />
+
+            <TextView
+                android:id="@+id/content_list_item_title"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:fontFamily="sans-serif-light"
+                android:letterSpacing="0"
+                android:textSize="24sp"
+                tools:text="Dark Souls" />
+
+            <TextView
+                android:id="@+id/content_list_item_status"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:fontFamily="sans-serif"
+                android:letterSpacing="0.25"
+                android:textSize="14sp"
+                tools:text="Completed" />
+
+        </LinearLayout>
+
     </LinearLayout>
-</LinearLayout>
+
+    <FrameLayout
+        android:layout_width="wrap_content"
+        android:layout_height="match_parent"
+        android:layout_alignParentRight="true">
+
+        <ImageView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center_vertical"
+            android:src="@drawable/ic_keyboard_arrow_right_black_24dp" />
+    </FrameLayout>
+
+</RelativeLayout>
