modify theming and add dummy data

--- a/app/src/main/res/layout/layout_content_list_item.xml
+++ b/app/src/main/res/layout/layout_content_list_item.xml
@@ -1,16 +1,27 @@
 <?xml version="1.0" encoding="utf-8"?>
+
+
+
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="88dp"
     android:orientation="horizontal"
-    android:padding="8dp">
+    android:background="@color/listItemBackground">
+
+    <View
+        android:id="@+id/content_list_item_blocker"
+        android:layout_width="4dp"
+        android:layout_height="match_parent"
+        android:background="@color/colorPrimaryDark"
+        />
 
     <LinearLayout
         android:layout_width="wrap_content"
         android:layout_height="match_parent"
-        android:layout_alignParentLeft="true"
-        android:gravity="center_vertical">
+        android:layout_toRightOf="@id/content_list_item_blocker"
+        android:gravity="center_vertical"
+        android:padding="8dp">
 
         <ImageView
             android:id="@+id/content_list_item_image"
@@ -30,7 +41,6 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:fontFamily="sans-serif"
-                android:letterSpacing="1.5"
                 android:textSize="10sp"
                 tools:text="10 1 2020" />
 
@@ -39,7 +49,6 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:fontFamily="sans-serif-light"
-                android:letterSpacing="0"
                 android:textSize="24sp"
                 tools:text="Dark Souls" />
 
@@ -48,7 +57,6 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:fontFamily="sans-serif"
-                android:letterSpacing="0.25"
                 android:textSize="14sp"
                 tools:text="Completed" />
 
@@ -59,7 +67,9 @@
     <FrameLayout
         android:layout_width="wrap_content"
         android:layout_height="match_parent"
-        android:layout_alignParentRight="true">
+        android:layout_alignParentRight="true"
+
+        android:padding="8dp">
 
         <ImageView
             android:layout_width="wrap_content"
