--- a/app/src/main/res/layout/activity_content_list.xml
+++ b/app/src/main/res/layout/activity_content_list.xml
@@ -6,13 +6,15 @@
     android:layout_height="match_parent"
     tools:context=".ContentListActivity">
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Hello World!"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+<androidx.recyclerview.widget.RecyclerView
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:orientation="vertical"
+    android:id="@+id/content_recycler_view"
+    android:padding="8dp"
+    android:background="@color/colorPrimaryLight"
+    >
+
+</androidx.recyclerview.widget.RecyclerView>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
