--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,4 +7,5 @@
 
     <color name="listItemBackground">#ffffff</color>
     <color name="transparent">#00000000</color>
+    <color name="textGrey">#424242</color>
 </resources>
