--- a/app/src/main/res/layout/layout_view_toolbar.xml
+++ b/app/src/main/res/layout/layout_view_toolbar.xml
@@ -8,9 +8,19 @@
     android:gravity="center_vertical">
 
     <ImageButton
+        android:id="@+id/view_back_button"
         android:layout_width="40dp"
         android:layout_height="40dp"
         android:src="@drawable/ic_keyboard_backspace_white_24dp"
-        android:background="?attr/selectableItemBackground"/>
+        android:background="?attr/selectableItemBackground"
+        android:visibility="visible"/>
+
+    <ImageButton
+        android:id="@+id/view_check_button"
+        android:layout_width="40dp"
+        android:layout_height="40dp"
+        android:src="@drawable/ic_check_white_24dp"
+        android:background="?attr/selectableItemBackground"
+        android:visibility="gone"/>
 
 </LinearLayout>
